refactoring: replaced get(0) by getFirst()