@@ -59,7 +59,7 @@ public class CollectionsUtils {
         Assert.isTrue(!list.isEmpty(), "list can't be empty");
 
         if (index == 0) {
-            list.add(0, list.get(0));
+            list.add(0, list.getFirst());
         } else if (index == list.size()) {
             list.add(getLast(list));
         } else {
